test/samples/invalid/missingNodeIdentifier.ygl
node {
    out {
        int bar = 0
    }
}